Edited README via GitHub

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-C# .Net Windows MDI GUI application that I had to create for myself simply to calculate my time and generate my Excel Timesheets and Invoices because it was so complicated.  May not be useful to anyone as an app, but much of the code is kind of cool and alot can be reused I am sure.
+Quick and dirty (well, not that quick) C# .Net Windows MDI GUI application that I had to create for myself simply to calculate my time and generate my Excel Timesheets and Invoices because it was so complicated.  May not be useful to anyone as an app, but much of the code is kind of cool and alot can be reused I am sure.
